Add the gallery, menu sections and start the order section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 
+
+    <!-- this is the link for the light gallery taht we used on the gallery  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/css/lightgallery.min.css">
+
     <link rel="stylesheet" href="styles.css">
 
 
@@ -27,8 +31,8 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#food">Food</a>
-        <a href="#gallery">Menu</a>
-        <a href="#order">Order</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#menu">Menu</a>
     </nav>
 
 
@@ -352,13 +356,353 @@
 
 
 
+<!-- the gallery section starts -->
 
+    <section class="gallery" id="gallery">
+
+        <div class="heading">
+            <span>Our gallery</span>
+            <h3>Our untold stories</h3>
+        </div>
+
+        <div class="gallery-container">
+            <a href="images/dish1.jpg" class="box">
+                <img src="images/dish1.jpg" alt="">
+                <div class="icon"><i class="fas fa-plus"></i></div>
+            </a>
+
+            <a href="images/dish2.jpg" class="box">
+                <img src="images/dish2.jpg" alt="">
+                <div class="icon"><i class="fas fa-plus"></i></div>
+            </a>
+
+            <a href="images/dish3.jpg" class="box">
+                <img src="images/dish3.jpg" alt="">
+                <div class="icon"><i class="fas fa-plus"></i></div>
+            </a>
+
+            <a href="images/dish4.jpg" class="box">
+                <img src="images/dish4.jpg" alt="">
+                <div class="icon"><i class="fas fa-plus"></i></div>
+            </a>
+
+            <a href="images/dish5.jpg" class="box">
+                <img src="images/dish5.jpg" alt="">
+                <div class="icon"><i class="fas fa-plus"></i></div>
+            </a>
+
+            <a href="images/dish6.jpg" class="box">
+                <img src="images/dish6.jpg" alt="">
+                <div class="icon"><i class="fas fa-plus"></i></div>
+            </a>
+
+
+        </div>
+
+    </section>
+
+
+<!-- the gallery section ends -->
+
+
+
+
+<!-- the menu section starts  -->
+
+    <section class="menu" id="menu">
+        <div class="heading">
+            <span>Our Menu</span>
+            <h3>Our popular dishes</h3>
+        </div>
+
+        <div class="swiper menu-slider">
+            <div class="swiper-wrapper">
+
+                <!-- the slider for displaying the breakfast menu -->
+                <div class="swiper-slide slide">
+                    <h3 class="title">breakfast</h3>
+                    <div class="box-container">
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious breakfast</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious breakfast</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious breakfast</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious breakfast</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious breakfast</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious breakfast</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <!-- the slider for displaying the lunch menu -->
+                <div class="swiper-slide slide">
+                    <h3 class="title">Lunch</h3>
+                    <div class="box-container">
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious lunch</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious lunch</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious lunch</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious lunch</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious lunch</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+                <!-- the slider for displayting the dinner menu -->
+                <div class="swiper-slide slide">
+                    <h3 class="title">Dinner</h3>
+                    <div class="box-container">
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious dinner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious dinner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious dinner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious dinner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious dinner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Delicious dinner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+                <!-- the slider for displaying the cold drinks offered at the restaurant -->
+                <div class="swiper-slide slide">
+                    <h3 class="title">Drinks</h3>
+                    <div class="box-container">
+                        <div class="box">
+                            <div class="info">
+                                <h3>Cold drinks</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Cold drinks</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Cold drinks</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Cold drinks</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>  
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Cold drinks</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <!-- slider for displaying the desserts section  -->
+                <div class="swiper-slide slide">
+                    <h3 class="title">Desserts</h3>
+                    <div class="box-container">
+                        <div class="box">
+                            <div class="info">
+                                <h3>Cold drinks</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Sweet desserts</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Sweet desserts</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                        <div class="box">
+                            <div class="info">
+                                <h3>Sweet desserts</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                            </div>
+                            <div class="price">600p</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+
+    </section>
+
+<!-- the menu section ends  -->
+
+
+
+<!-- the order section starts  -->
+
+    <section class="order" id="order">
+        <div class="heading">
+            <span>Order now</span>
+            <h3>fast delivery</h3>
+        </div>
+        <form action="">
+            <div class="box-container">
+                <div class="box">
+                    <div class="inputBox">
+                        <span>Full name</span>
+                        <input type="text" placeholder="Enter your name">
+                    </div>
+                    <div class="inputBox">
+                        <span>Food name</span>
+                        <input type="text" placeholder="The food you want">
+                    </div>
+                    <div class="inputBox">
+                        <span>Order details</span>
+                        <input type="text" placeholder="Specifics with food">
+                    </div>
+                    <div class="inputBox">
+                        <textarea name="" placeholder="Enter your address" id="" cols="30" rows="10"></textarea>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
+<!-- the order section starts  -->
 
 
 
 <!-- we get the custom js file  -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
+<!-- this is for the light gallery  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/lightgallery.min.js"></script>
+
+
+<!-- this is the local js file -->
 <script src="index.js"></script>
+
 
 
 </body>
