--- a/index.html
+++ b/index.html
@@ -683,11 +683,37 @@
                         <input type="text" placeholder="Specifics with food">
                     </div>
                     <div class="inputBox">
+                        <span>Your address</span>
                         <textarea name="" placeholder="Enter your address" id="" cols="30" rows="10"></textarea>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="inputBox">
+                        <span>Number</span>
+                        <input type="number" placeholder="Enter your number">
+                    </div>
+                    <div class="inputBox">
+                        <span>How much</span>
+                        <input type="number" placeholder="How many you want">
+                    </div>
+                    <div class="inputBox">
+                        <span>When you want</span>
+                        <input type="datetime-local">
+                    </div>
+                    <div class="inputBox">
+                        <span>Our address</span>
+                        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.396057418524
+                        6!2d30.343107899999996!3d59.92557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0
+                        x469631aebeaa3551%3A0x7a16bdec56149506!2sRaz%22Yezzhaya%20Ulitsa%2C%203%2C%20Sankt-Pet
+                        erburg%2C%20191002!5e0!3m2!1sen!2sru!4v1661904158115!5m2!1sen!2sru"  allowfullscreen="" 
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>                    
                     </div>
                 </div>
             </div>
         </form>
+        <input type="submit" value="Order Now" class="btn">
     </section>
 <!-- the order section starts  -->
 
