Finish all the section on the website

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="#food">Food</a>
         <a href="#gallery">Gallery</a>
         <a href="#menu">Menu</a>
+        <a href="#blogs">Blogs</a>
     </nav>
 
 
@@ -712,10 +713,148 @@
                     </div>
                 </div>
             </div>
+            <input type="submit" value="Order Now" class="btn">
         </form>
-        <input type="submit" value="Order Now" class="btn">
     </section>
 <!-- the order section starts  -->
+
+
+
+
+
+
+
+<!-- the order section starts  -->
+
+
+    <section class="blogs" id="blogs">
+        <div class="heading">
+            <span>Our blogs</span>
+            <h3>Out latest posts</h3>
+        </div>
+
+        <div class="swiper blogs-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="images/about.jpg" alt="dish">
+                        <span>Dish</span>
+                    </div>
+                    <div class="content">
+                        <div class="icon">
+                            <a href="#"><i class="fas fa-calendar"></i> 1st June, 2022</a>
+                            <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        </div>
+                        <a href="#" class="title">Blog title goes here</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="images/dish2.jpg" alt="salat">
+                        <span>Salat</span>
+                    </div>
+                    <div class="content">
+                        <div class="icon">
+                            <a href="#"><i class="fas fa-calendar"></i> 1st July, 2022</a>
+                            <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        </div>
+                        <a href="#" class="title">Blog title goes here</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="images/dish3.jpg" alt="tomato salat">
+                        <span>Tomato salat</span>
+                    </div>
+                    <div class="content">
+                        <div class="icon">
+                            <a href="#"><i class="fas fa-calendar"></i> 1st August, 2022</a>
+                            <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        </div>
+                        <a href="#" class="title">Blog title goes here</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="image">
+                        <img src="images/dish4.jpg" alt="polony salat">
+                        <span>Polony salat</span>
+                    </div>
+                    <div class="content">
+                        <div class="icon">
+                            <a href="#"><i class="fas fa-calendar"></i> 1st September, 2022</a>
+                            <a href="#"><i class="fas fa-user"></i> by admin</a>
+                        </div>
+                        <a href="#" class="title">Blog title goes here</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
+                        <a href="#" class="btn">Read more</a>
+                    </div>
+                </div>
+            </div>  
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
+
+<!-- the order section ends  -->
+
+
+
+
+
+<!-- the footer section starts  -->
+
+    <section class="footer">
+        <div class="icons-container">
+            <div class="icons">
+                <i class="fas fa-clock"></i>
+                <h3>Opening hours</h3>
+                <p>11.00 - 21:00</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-phone"></i>
+                <h3>Phone</h3>
+                <p>+7 921 954 8535</p>
+                <p>+7 900 462 4784</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-envelope"></i>
+                <h3>Email</h3>
+                <p>laudes@mail.ru</p>
+                <p>chukudim@mail.ru</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-map"></i>
+                <h3>Address</h3>
+                <p>Санкт-Петербург, Разъезжая ул. 3</p>
+            </div>
+        </div>
+
+        <div class="share">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-vk"></a>
+        </div>
+
+        <div class="credit">All rights reserved. Laudes 2022</div>
+        <div class="powered">Powered by <a href="https://www.instagram.com/rockie_tech/" target="_blank">Rockie Tech</a></div>
+
+    </section>
+
+
+<!-- the footer section ends  -->
 
 
 
