--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
         </div>
 
         <div class="credit">All rights reserved. Laudes 2022</div>
-        <div class="powered">Powered by <a href="https://www.instagram.com/rockie_tech/" target="_blank">Rockie Tech</a></div>
+        <div class="powered">Powered by <a href="https://www.instagram.com/rockie_tech/" target="_blank"><strong>Rockie Tech</strong></a></div>
 
     </section>
 
