changed the html and js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- the header section = -->
 
 <section class="header">
-    <a href="#" class="logo"> <i class="fas fa-utensils"></i> Laudes </a>
+    <a href="#" class="logo"> Laudes </a>
 
 
     <nav class="navbar">
