Change the navigation, remove the added code on the reviews to make it mobile responsive

--- a/index.html
+++ b/index.html
@@ -670,75 +670,10 @@
         <!-- the packages section starts  -->
 
             <section class="packages" id="packages">
-                <div class="grid">
-                    <div class="grid-item">
-                        <div class="card">
-                            <img src="images/about.jpg" alt="">
-                            <div class="card-content">
-                                <h1 class="card-header">Extended Package</h1>
-                                <ul>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                </ul>
-                                <button class="card-btn">
-                                    Order <span>&rarr;</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="grid-item">
-                        <div class="card">
-                            <img src="images/dish2.jpg" alt="">
-                            <div class="card-content">
-                                <h1 class="card-header">Extended Package</h1>
-                                <ul>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                </ul>
-                                <button class="card-btn">
-                                    Order <span>&rarr;</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="grid-item">
-                        <div class="card">
-                            <img src="images/dish2.jpg" alt="">
-                            <div class="card-content">
-                                <h1 class="card-header">Extended Package</h1>
-                                <ul>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                    <li>Lorem ipsum dolor</li>
-                                </ul>
-                                <button class="card-btn">
-                                    Order <span>&rarr;</span>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="heading">
+                    <span>Packages</span>
+                    <h3>Our Extended Packages</h3>
+                </div>
 
                 </div>
             </section>
@@ -904,77 +839,6 @@
                 <span>Reviews</span>
                 <h3>Customer Feedback</h3>
             </div>
-
-            <div class="slider">
-                <div class="slide">
-                    <input type="radio" name="radio-btn" id="radio1">
-                    <input type="radio" name="radio-btn" id="radio2">
-                    <input type="radio" name="radio-btn" id="radio3">
-                    <input type="radio" name="radio-btn" id="radio4">
-                    <input type="radio" name="radio-btn" id="radio5">
-                    <input type="radio" name="radio-btn" id="radio6">
-                    <input type="radio" name="radio-btn" id="radio7">
-                    <input type="radio" name="radio-btn" id="radio8">
-                    <input type="radio" name="radio-btn" id="radio9">
-
-
-                    <div class="st">
-                        <img src="images/review.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review1.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review2.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review3.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review4.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review5.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review6.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review7.png" alt="review photo">
-                    </div>
-                    <div class="st">
-                        <img src="images/review8.png" alt="review photo">
-                    </div>
-
-            
-                    <div class="nav-auto">
-                        <div class="a-b1"></div>
-                        <div class="a-b2"></div>
-                        <div class="a-b3"></div>
-                        <div class="a-b4"></div>
-                        <div class="a-b5"></div>
-                        <div class="a-b6"></div>
-                        <div class="a-b7"></div>
-                        <div class="a-b8"></div>
-                        <div class="a-b9"></div>
-                    </div>
-
-                    <div class="nav m">
-                        <label for="radio1" class="m-btn"></label>
-                        <label for="radio2" class="m-btn"></label>
-                        <label for="radio3" class="m-btn"></label>
-                        <label for="radio4" class="m-btn"></label>
-                        <label for="radio5" class="m-btn"></label>
-                        <label for="radio6" class="m-btn"></label>
-                        <label for="radio7" class="m-btn"></label>
-                        <label for="radio8" class="m-btn"></label>
-                        <label for="radio9" class="m-btn"></label>
-                    </div>
-
-
-                </div>
-            </div>
-
 
         </section>
 
