Add the reviews section

--- a/index.html
+++ b/index.html
@@ -840,6 +840,28 @@
                 <h3>Customer Feedback</h3>
             </div>
 
+
+            <div class="carousel-wrapper">
+                <span id="item-1"></span>
+                <span id="item-2"></span>
+                <span id="item-3"></span>
+
+                <div class="carousel-item item-1">
+                    <a href="#item-3" class="arrow-prev arrow"></a>
+                    <a href="#item-2" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-2">
+                    <a href="#item-1" class="arrow-prev arrow"></a>
+                    <a href="#item-3" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-3">
+                    <a href="#item-2" class="arrow-prev arrow"></a>
+                    <a href="#item-1" class="arrow-next arrow"></a>
+                </div>
+            </div>
+
         </section>
 
         <!-- the reviews section ends  -->
