And the links to the social links

--- a/index.html
+++ b/index.html
@@ -902,9 +902,9 @@
                 </div>
 
                 <div class="share">
-                    <a href="#" class="fab fa-facebook"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-vk"></a>
+                    <a href="https://vk.com/bravolaudes" class="fab fa-vk"></a>
+                    <a href="" class="fab fa-instagram"></a>
+                    <a href="https://wa.me/message/3U27COCOMNUBC1" class="fab fa-whatsapp"></a>
                 </div>
 
                 <div class="credit">All rights reserved. Laudes 2022</div>
