make changes to the reviews section

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <a href="#food">Food</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#menu">Menu</a>
-                <a href="#blogs">Blogs</a>
+                <!-- <a href="#blogs">Blogs</a> -->
                 <a href="#reviews">Reviews</a>
+                <a href="#contact">Contact Us</a>
             </nav>
 
 
@@ -747,7 +748,7 @@
 
         <!-- the blogs section starts  -->
 
-
+<!-- 
             <section class="blogs" id="blogs">
                 <div class="heading">
                     <span>Our blogs</span>
@@ -824,7 +825,7 @@
                     </div>  
                     <div class="swiper-pagination"></div>
                 </div>
-            </section>
+            </section> -->
 
         <!-- the blogs section ends  -->
 
@@ -845,6 +846,13 @@
                 <span id="item-1"></span>
                 <span id="item-2"></span>
                 <span id="item-3"></span>
+                <span id="item-4"></span>
+                <span id="item-5"></span>
+                <span id="item-6"></span>
+                <span id="item-7"></span>
+                <span id="item-8"></span>
+                <span id="item-9"></span>
+
 
                 <div class="carousel-item item-1">
                     <a href="#item-3" class="arrow-prev arrow"></a>
@@ -858,8 +866,39 @@
 
                 <div class="carousel-item item-3">
                     <a href="#item-2" class="arrow-prev arrow"></a>
+                    <a href="#item-4" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-4">
+                    <a href="#item-3" class="arrow-prev arrow"></a>
+                    <a href="#item-5" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-5">
+                    <a href="#item-4" class="arrow-prev arrow"></a>
+                    <a href="#item-6" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-6">
+                    <a href="#item-5" class="arrow-prev arrow"></a>
+                    <a href="#item-7" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-7">
+                    <a href="#item-6" class="arrow-prev arrow"></a>
+                    <a href="#item-8" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-8">
+                    <a href="#item-7" class="arrow-prev arrow"></a>
+                    <a href="#item-9" class="arrow-next arrow"></a>
+                </div>
+
+                <div class="carousel-item item-9">
+                    <a href="#item-8" class="arrow-prev arrow"></a>
                     <a href="#item-1" class="arrow-next arrow"></a>
                 </div>
+
             </div>
 
         </section>
@@ -872,7 +911,7 @@
 
         <!-- the footer section starts  -->
 
-            <section class="footer">
+            <section class="footer" id="contact">
                 <div class="icons-container">
                     <div class="icons">
                         <i class="fas fa-clock"></i>
